# ragAppUsingOllama

./: README.md  explanation.txt  pyproject.toml  rag.py  ui.py
