[tool.poetry]
name = "ragappusingollama"
version = "0.1.0"
description = ""
authors = ["satyamdas03 <116027621+satyamdas03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.3"
langchain = "^0.3.7"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.7.3"
gradio = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
